--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,19 @@
 	<title>Grid Creator</title>
 
 	<link rel="stylesheet" type="text/css" href="./style/jquery.gridster.css">
-	<link rel="stylesheet" type="text/css" href="./style/demo.css">
+	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" href="./style/font-awesome-4.3.0/css/font-awesome.min.css">
 
 
 </head>
 
 	<body>
+
+
+		<div class='header'>YOU.F.O. JERK IT JERK IT</div>
+
+
+
 
 		<div class="wrapper">
 
