--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
 		</div> 
 
-		<script data-main="common" src="library/require.js"></script>
+		<script data-main="common" src="./library/require.js"></script>
 
 	</body>
 	
