--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 		<div class="wrapper">
 
 			<div class="sub-wrapper"></div>
-			<a class="addBlock fa fa-plus-circle"></a>
+<!-- 			<a class="addBlock fa fa-plus-circle"></a> -->
 			<a class="freeze-block fa fa-lock locked"></a>
 
 		</div> 
