--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,15 @@
 	<link rel="stylesheet" type="text/css" href="./style/jquery.gridster.css">
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" href="./style/font-awesome-4.3.0/css/font-awesome.min.css">
-
-
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
 </head>
 
 	<body>
 
 
-		<div class='header'>YOU.F.O. JERK IT JERK IT</div>
+		<div class='header'>
+			<div class='title-container'>FYKE </div>
+		</div>
 
 
 
