--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,10 @@
 
 		<div class="wrapper">
 
-			<div class="sub-wrapper"></div>
-			<a class="freeze-block fa fa-lock locked"></a>
+			<div class="sub-wrapper">
+				<div class="gridster"> </div>
+			</div>
+			<a class="freeze-block fa fa-lock"></a>
 
 		</div> 
 
