Add headerController and Refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Grid Creator</title>
+	<title>FYKE -  Streaming Analytics</title>
 
 	<link rel="stylesheet" type="text/css" href="./style/jquery.gridster.css">
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
@@ -13,7 +13,11 @@
 
 
 		<div class='header'>
-			<div class='title-container'>FYKE </div>
+			<div class='title-container'>FYKE</div>
+			<div class="launcher">
+				<div class='launcher-label'>Lock Dashboard</div>
+				<a style='position: relative; float:right;' class="launcher-icon freeze-block fa fa-lock"></a>
+			</div>
 		</div>
 
 
@@ -24,7 +28,7 @@
 			<div class="sub-wrapper">
 				<div class="gridster"> </div>
 			</div>
-			<a class="freeze-block fa fa-lock"></a>
+
 
 		</div> 
 
