--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
 		<div class="wrapper">
 
 			<div class="sub-wrapper">
-				<div class="gridster"> </div>
+				<div class="gridster">
+					<ul></ul>
+				</div>
 			</div>
 
 
