Implement Fyke Icon

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 	<body>
 
 
-		<div class='header'>
+		<div class="header">
+			<img src="fyke.svg" class="fyke-svg-container">
 			<div class='title-container'>FYKE</div>
 			<div class="launcher">
 				<div class='launcher-label'>Lock Dashboard</div>
