--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,8 @@
 
 	<body>
 
-
 		<div class="header">
-			<img src="fyke.svg" class="fyke-svg-container">
+			<img src="./resources/images/fyke.svg" class="fyke-svg-container">
 			<div class='title-container'>FYKE</div>
 			<div class="launcher">
 				<div class='launcher-label'>Lock Dashboard</div>
@@ -21,18 +20,12 @@
 			</div>
 		</div>
 
-
-
-
 		<div class="wrapper">
-
 			<div class="sub-wrapper">
 				<div class="gridster">
 					<ul></ul>
 				</div>
 			</div>
-
-
 		</div> 
 
 		<script data-main="common" src="./library/require.js"></script>
