Implement require Text Plugin

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,13 @@
 
 	<body>
 
+
 		<div class="header">
 			<img src="./resources/images/fyke.svg" class="fyke-svg-container">
 			<div class='title-container'>FYKE</div>
-			<div class="launcher">
-				<div class='launcher-label'>Lock Dashboard</div>
-				<a style='position: relative; float:right;' class="launcher-icon freeze-block fa fa-lock"></a>
-			</div>
+			<div class="launcher-container"></div>	
 		</div>
+
 
 		<div class="wrapper">
 			<div class="sub-wrapper">
