Change Header Style

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,10 @@
 
 
 		<div class="header">
-			<img src="./resources/images/fyke.svg" class="fyke-svg-container">
-			<div class='title-container'>FYKE</div>
+			<div class='header-title'>FYKE</div>
+			<img src="./resources/images/fyke.svg" class="header-logo">
+<!-- 			<div class='dashboard-tab'>Dashboard</div>
+			<div class='analytics-tab'>Analytics</div> -->
 			<div class="launcher-container"></div>	
 		</div>
 
