--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,7 @@
 	<body>
 
 
-		<div class="header">
-			<div class='header-title'>FYKE</div>
-			<img src="./resources/images/fyke.svg" class="header-logo">
-			<div class='dashboard-tab tab selected' data-tab='dashboard'>DASHBOARD</div>
-			<div class='analytics-tab tab' data-tab='streams'>STREAMS</div>
-			<div class="launcher-container"></div>	
-		</div>
+		<div class="header"></div>
 
 
 		<div class="wrapper">
