--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,13 @@
 
 
 		<div class="wrapper">
-			<div class="sub-wrapper">
+<!-- 			<div class="sub-wrapper">
 				<div class="gridster">
 					<ul></ul>
 				</div>
-			</div>
+			</div> -->
 		</div> 
+
 
 		<script data-main="common" src="./library/require.js"></script>
 
