--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="./style/jquery.gridster.css">
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" href="./style/font-awesome-4.3.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet" type="text/css">
 </head>
 
 	<body>
