Implement Stream Item View Logic

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,8 @@
 
 	<body>
 
-
 		<div class="header"></div>
-
-
-		<div class="wrapper">
-<!-- 			<div class="sub-wrapper">
-				<div class="gridster">
-					<ul></ul>
-				</div>
-			</div> -->
-		</div> 
-
+		<div class="wrapper"></div> 
 
 		<script data-main="common" src="./library/require.js"></script>
 
