--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 		<div class="header"></div>
 		<div class="wrapper"></div> 
 
-		<script data-main="common" src="./library/require.js"></script>
+		<script data-main="main" src="./library/require.js"></script>
 
 	</body>
 	
