--- a/src/login.html
+++ b/src/login.html
@@ -15,24 +15,7 @@
 
     <div class="login-wrapper">
       <div class="login-wrapper-pusher"></div>
-
-      <div id="login-wrapper-container">
-
-<!--         <img src="./resources/images/fyke.svg">
-        <div class="login-wrapper-container-fyke">FYKE</div>
-
-        <input placeholder="Email">
-        <input placeholder="Password" type="password">
-
-        <button class="login-button"> Log In</button>
-        <button class="login-facebook"> Login with Facebook  <i class="fa fa-facebook-official" style="font-size:20px"></i> </button>
-
-        <div class="login-wrapper-container-login tab selected"> Log In </div>
-        <div class="login-wrapper-container-signup tab"> Sign Up </div> -->
-
-      </div>
-
-
+      <div id="login-wrapper-container"></div>
     </div>
 
     <div class="login-footer"> 
