--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,13 @@
 	<title>FYKE -  Streaming Analytics</title>
 
 	<link rel="stylesheet" type="text/css" href="./style/jquery.gridster.css">
+	<link rel="stylesheet" type="text/css" href="./style/styleLogin.css">
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" href="./style/font-awesome-4.3.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet" type="text/css">
 </head>
 
 	<body>
-
-		<div class="header"></div>
-		<div class="wrapper"></div> 
 
 		<script data-main="main" src="./library/require.js"></script>
 
