--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
 	<title>FYKE -  Streaming Analytics</title>
 	<link rel="stylesheet" type="text/css" href="./style/jquery.gridster.css">
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
+	<link rel="stylesheet" type="text/css" href="./style/gridster.css">
+	<link rel="stylesheet" type="text/css" href="./style/dashboard.css">
+	<link rel="stylesheet" type="text/css" href="./style/header.css">
+	<link rel="stylesheet" type="text/css" href="./style/streamboard.css">
+	<link rel="stylesheet" type="text/css" href="./style/login.css">
 	<link rel="stylesheet" href="./style/font-awesome-4.3.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet" type="text/css">	
 </head>
@@ -15,3 +20,6 @@
 	</body>	
 
 </html>
+
+
+ 
